# ai-docs-assistant

./: .gitignore  README.md  README.ru.md
backend/: .dockerignore  Dockerfile  Justfile  docker-compose.yml  pyproject.toml
backend/docs/: api.md  create_task.md  delete_user.md  get_profile.md  get_tasks.md  get_users.md  update_task.md
backend/just/: convenience.just  helpers.just  main.just  quality.just  stacks.just
backend/lora-adapter/: Modelfile  README.md
backend/src/ai_docs_assistant/: main.py
backend/src/ai_docs_assistant/app/: agents.py  health.py  logger.py  main.py  rag.py  schemas.py  settings.py  storage.py
backend/src/ai_docs_assistant/application/dtos/: documents.py  generation_jobs.py  health.py
backend/src/ai_docs_assistant/application/interfaces/: document_generator.py  document_index.py  document_storage.py  generation_job_queue.py  generation_job_repository.py  health_checker.py
backend/src/ai_docs_assistant/application/services/: search_relevance_policy.py  search_result_selector.py
backend/src/ai_docs_assistant/application/use_cases/: create_generation_job.py  generate_docs.py  get_generation_job.py  healthcheck.py  initialize_knowledge_base.py  process_generation_job.py  search_docs.py
backend/src/ai_docs_assistant/config/dependencies/: api.py  common.py  container.py  facade.py  generation.py  indexer.py
backend/src/ai_docs_assistant/config/settings/: app.py  base.py  logger.py  ollama.py  qdrant.py  redis.py
backend/src/ai_docs_assistant/domain/entities/: api_document.py  generation_job.py
backend/src/ai_docs_assistant/domain/enums/: generation_job_status.py
backend/src/ai_docs_assistant/domain/services/: document_filename_policy.py  document_policy.py
backend/src/ai_docs_assistant/domain/value_objects/: document_content.py  search_score.py
backend/src/ai_docs_assistant/entrypoints/application/: __main__.py
backend/src/ai_docs_assistant/entrypoints/workers/generation/: __main__.py
backend/src/ai_docs_assistant/entrypoints/workers/indexer/: __main__.py  cli.py
backend/src/ai_docs_assistant/infrastructure/agents/: __init__.py  crewai_document_generator.py
backend/src/ai_docs_assistant/infrastructure/health/: __init__.py  http_health_checker.py  http_probe.py
backend/src/ai_docs_assistant/infrastructure/redis/: client.py  generation_job_queue.py  generation_job_repository.py
backend/src/ai_docs_assistant/infrastructure/storage/: __init__.py  fs_document_storage.py
backend/src/ai_docs_assistant/infrastructure/vector_store/: __init__.py  qdrant_doc_index.py
backend/src/ai_docs_assistant/presentation/api/rest/: app.py  dependencies.py
backend/src/ai_docs_assistant/presentation/api/rest/routers/: __init__.py  docs.py  healthcheck.py
backend/src/ai_docs_assistant/presentation/api/rest/schemas/: docs.py  health.py
