[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ai-docs-assistant"
version = "0.1.0"
description = "Final AI assignment from the course on LLM, with revisions."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "mrKazzila", email = "mrkazzila@gmail.com" }]
dependencies = []


[project.scripts]
ai-docs-assistant = "ai_docs_assistant.main:main"
